# StreamCap

./: .gitignore  main.py  pyproject.toml  requirements.txt  version_info.txt
.github/workflows/: build-desktop.yml
app/: __init__.py  app_manager.py
app/api/: video_stream_service.py
app/core/config/: settings_config.py
app/core/media/: speech_to_text.py
app/core/recording/: record_manager.py  stream_manager.py
app/core/runtime/: bundled_env.py  paths.py
app/lifecycle/: tray_manager.py
app/models/recording/: recording_model.py  recording_status_model.py
app/scripts/: download_whisper_model.py  ffmpeg_install.py  node_install.py
app/ui/components/business/: recording_card.py
app/ui/components/state/: recording_card_state.py
app/ui/views/: about_view.py  home_view.py  settings_view.py
app/utils/: logger.py
config/: default_settings.json
docs/: packaging.md  packaging_en.md
locales/: en.json  zh_CN.json
scripts/: build.py  create_macos_dmg.sh  download_ffmpeg.py  download_nodejs.py
